# egrikor

./: Cargo.toml  README.md
examples/: 7guis_counter.rs  7guis_temp_conv.rs  basic.rs  textbox.rs  toggle.rs
src/: lib.rs  pass_widget.rs  theme.rs
src/text/: attribute.rs  backspace.rs  editable_text.rs  editor.rs  font_descriptor.rs  format.rs  layout.rs  mod.rs  movement.rs  storage.rs  text_input.rs
src/widgets/: button.rs  checkbox.rs  drawables.rs  dropdown.rs  dyn_stateful_widget.rs  mod.rs  or.rs  popup.rs  stateful_widget.rs  textbox.rs
src/widgets/lists/: col.rs  flex.rs  iter.rs  mod.rs  row.rs
