[package]
name = "egrikor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-shell = "0.7.0"
piet-common = "0.3.2"

# for code copied from druid (not sure if needed in the long run)
xi-unicode = "0.3.0"
unicode-segmentation = "1.7.1"
